<resources>
    <string name="app_name">Foci</string>

    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_sign_up">New User</string>

    <string name="action_settings">Settings</string>
    <string name="server_label">Server</string>
    <string name="foodie_label">Foodie</string>
    <string name="already_user">Already have an account? Login here.</string>
    <string name="chef_label">Chef</string>
    <string name="choice_string">Choose One of Following:</string>

    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="cancel">Cancel</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions. </string>
    <string name="full_name">Full Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello There</string>
    <string name="error_field_required">This field is required</string>
</resources>
